name:                bigpanda
version:             0.1.0.0
synopsis:            BigPanda exercise
description:         Please see README.md
homepage:            https://github.com/onporat/bigpanda#readme
license:             BSD3
license-file:        LICENSE
author:              Oded Porat
maintainer:          onporat@gmail.com
copyright:           2016 Oded Porat
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable bigpanda-exe
  hs-source-dirs:      src
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , async
                     , bytestring
                     , conduit
                     , conduit-extra
                     , containers
                     , lens
                     , pretty
                     , snap
                     , text
                     , transformers
                     , unix
  default-language:    Haskell2010

test-suite bigpanda-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , bigpanda
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/onporat/bigpanda
